# WhisloAI

./: .gitignore  .impeccable.md  README.md  next.config.mjs  package-lock.json  package.json  tauri.d.ts
.github/workflows/: macos-check.yml  release.yml
dist 12-40-08-225/: anchor.js  main.js  settings.js  widget.js
docs/: especificacion-funcional-mvp.md
docs/superpowers/audits/: 2026-03-14-ui-audit.md
docs/superpowers/plans/: 2026-03-23-toolbox-audio-to-text.md
scripts/: build-install-local-macos.sh  install-local-macos.sh  install-windows-context-action.ps1  macos-context-action.sh  release-local.sh  reset-local-blank-state-macos.sh  test-anchor-applescript.sh  uninstall-windows-context-action.ps1  windows-context-action.ahk  windows-context-action.ps1
src/: anchor.html  anchor.js  errors.js  i18n.js  index.html  main.js  settings.html  settings.js  styles.css  widget.html  widget.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_ax.rs
src-tauri/src/app/: mod.rs
src-tauri/src/commands/: mod.rs  onboarding.rs  providers.rs  settings.rs  text_ops.rs  ui.rs
src-tauri/src/domain/: ai.rs  anchor.rs  config.rs  geometry.rs  mod.rs  providers.rs
src-tauri/src/overlay/: anchor_monitor.rs  mod.rs  refocus.rs  tray.rs  windows.rs
src-tauri/src/platform/: macos.rs  mod.rs  unsupported.rs  windows.rs
tests/: permissions-settings-onboarding.test.mjs  updater-integration.test.mjs
