[package]
name = "app"
version = "0.1.12"
description = "WhisloAI desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
keyring = "3.6.3"
log = "0.4"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
symphonia = { version = "0.5", default-features = false, features = ["all"], optional = true }
whisper-rs = { version = "0.15", default-features = false, features = ["log_backend"], optional = true }

[features]
default = ["local-transcription"]
local-transcription = ["symphonia", "whisper-rs"]

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
enigo = { version = "0.3.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-application-services = { version = "0.3.2", default-features = false, features = ["AXError", "AXUIElement", "AXValue", "HIServices", "libc"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSRunningApplication", "libc"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["CFNumber", "CFString", "CFCGTypes"] }
